--- a/IdeaProjects/brainfuck/src/main/java/nsu/config.properties
+++ b/IdeaProjects/brainfuck/src/main/java/nsu/config.properties
@@ -3,6 +3,6 @@
 >=nsu.command.ForwardPointer
 <=nsu.command.BackPointer
 .=nsu.command.Output
-,=command.Input
+,=nsu.command.Input
 [=nsu.command.StartLoop
 ]=nsu.command.EndLoop
