--- a/IdeaProjects/brainfuck/build.gradle
+++ b/IdeaProjects/brainfuck/build.gradle
@@ -2,16 +2,18 @@ plugins {
     id 'java'
 }
 
-group = 'org.example'
+group = 'nsu'
 version = '1.0-SNAPSHOT'
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 }
 
 test {
