--- a/tutorial/.gitignore
+++ b/tutorial/.gitignore
@@ -1,16 +1,46 @@
-# Игнорировать папку .gradle
-/.gradle/
+*
+!*/
+!*.java
+!**/*.java
+#.gradle
+#build/
+#!gradle/wrapper/gradle-wrapper.jar
+#!**/src/main/**/build/
+#!**/src/test/**/build/
 
-# Игнорировать папку build
-/build/
-
-# Игнорировать все файлы с расширением .log
-*.log
-
-# Игнорировать временные файлы IDE
-.idea/
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
 *.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-# Игнорировать локальные настройки
-*.local
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
